// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SymantecVip Authenticator Transformer Tests should have correct elements in enroll flow 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.symantecVip.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.symantecVip.enroll.description",
        },
        "type": "Description",
      },
      {
        "label": "Fake Label 1",
        "type": "Field",
      },
      {
        "label": "Fake Label 2",
        "type": "Field",
      },
      {
        "label": "mfa.enroll",
        "options": {
          "step": "enroll-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`SymantecVip Authenticator Transformer Tests should have correct elements in verify flow 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.symantecVip.challenge.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.symantecVip.challenge.description",
        },
        "type": "Description",
      },
      {
        "label": "Fake Label 1",
        "type": "Field",
      },
      {
        "label": "Fake Label 2",
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
